fix: update the spacing of the the message

--- a/src/components/message/_message.scss
+++ b/src/components/message/_message.scss
@@ -2,6 +2,7 @@
   min-width: 375px;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   position: fixed;
   right: 0;
   left: 0;
@@ -19,6 +20,11 @@
   backdrop-filter: blur(20px);
   -webkit-backdrop-filter: blur(20px);
   box-shadow: 0px 1px 24px -1px rgba(0, 0, 0, 0.1);
+
+  &__content {
+    display: flex;
+    align-items: center;
+  }
 
   &__close-icon::before {
     font-size: 20px;
